adding endpoint register
