# swagger.yml
@@ -51,6 +51,36 @@ paths:
                     $ref: "#/components/schemas/JWT"
         "422": # status code
           description: Unproccessable entity
+  /auth/register:
+    post:
+      tags:
+        - Auth
+      summary: Endpoint for register users.
+      description: Login user return token.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Login"
+      responses:
+        "200": # status code
+          description: A JSON array of usernames
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status_code:
+                    type: integer
+                    example: 200
+                  message:
+                    type: string
+                    example: "OK"
+                  data:
+                    $ref: "#/components/schemas/JWT"
+        "422": # status code
+          description: Unproccessable entity
   /users:
     post:
       tags:
@@ -964,10 +994,10 @@ components:
     Login:
       type: object
       required:
-        - email
+        - username
         - password
       properties:
-        email:
+        username:
           type: string
           example: jhon@doe@gmail.com
         password:
